feat: computer version for menu pages. - Fixed "Fonctionnement" steps numbers. - Fixed menu hover effect (overflow added to dishes title). - Various styling adjustments.

--- a/public/pages/menu-pages/a-la-francaise.html
+++ b/public/pages/menu-pages/a-la-francaise.html
@@ -40,111 +40,112 @@
                 </label>
             </div>
 
-            <section class="entrees">
-                <h2>ENTRÉES</h2>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Tartare de poulpe acidulé</h3>
-                        <p class="entrees__description">Aux zestes d'orange</p>
+            <div class="menus__container">
+                <section class="entrees">
+                    <h2>ENTRÉES</h2>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Tartare de poulpe acidulé</h3>
+                            <p class="entrees__description">Aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">25€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">25€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Velouté de légumes d'antan</h3>
+                            <p class="entrees__description">Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">35€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Velouté de légumes d'antan</h3>
-                        <p class="entrees__description">Carotte, panais, topinambour</p>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Soupe à l'oignon</h3>
+                            <p class="entrees__description">Revisitée</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">20€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">35€</p>
-                        <div class="entrees__check menu__check"></div>
+                </section>
+    
+                <section class="plats">
+                    <h2>PLATS</h2>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Coquilles Saint-Jacques</h3>
+                            <p class="plats__description">Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">40€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Soupe à l'oignon</h3>
-                        <p class="entrees__description">Revisitée</p>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Magret de canard</h3>
+                            <p class="plats__description">Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">35€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">20€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p class="plats__description">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">44€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-            </section>
-
-            <section class="plats">
-                <h2>PLATS</h2>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Coquilles Saint-Jacques</h3>
-                        <p class="plats__description">Accompagnées d'une purée de panais</p>
+                </section>
+    
+                <section class=desserts>
+                    <h2>DESSERTS</h2>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Pétales de violettes glacés</h3>
+                            <p class="desserts__description">Et purée de noisettes</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">18€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">40€</p>
-                        <div class="plats__check menu__check"></div>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Fondant au chocolat</h3>
+                            <p class="desserts__description">Revisité</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">22€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Magret de canard</h3>
-                        <p class="plats__description">Et parmentier de pommes de terre</p>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Millefeuille croustillant</h3>
+                            <p class="desserts__description">Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">23€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">35€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Pigeonneau d’Ille-et-Vilaine</h3>
-                        <p class="plats__description">Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">44€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section class=desserts>
-                <h2>DESSERTS</h2>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Pétales de violettes glacés</h3>
-                        <p class="desserts__description">Et purée de noisettes</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">18€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Fondant au chocolat</h3>
-                        <p class="desserts__description">Revisité</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">22€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Millefeuille croustillant</h3>
-                        <p class="desserts__description">Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">23€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-
-                <div class="menu__btn-validatation">
-                    <button class="btn">Commander</button>
-                </div>
-            </section>
+                </section>
+            </div>
+            <div class="menu__btn-validatation">
+                <button class="btn">Commander</button>
+            </div>          
         </main>
 
         <footer>
