--- a/public/pages/menu-pages/la-note-enchantee.html
+++ b/public/pages/menu-pages/la-note-enchantee.html
@@ -40,121 +40,122 @@
                 </label>
             </div>
 
-            <section class="entrees">
-                <h2>ENTRÉES</h2>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Ravioles de foie gras </h3>
-                        <p class="entrees__description">Accompagnés de leur crème à la truffe</p>
+            <div class="menus__container">
+                <section class="entrees">
+                    <h2>ENTRÉES</h2>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Ravioles de foie gras </h3>
+                            <p class="entrees__description">Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">25€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">25€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Caviar osciètre </h3>
+                            <p class="entrees__description">Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">35€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Caviar osciètre </h3>
-                        <p class="entrees__description">Sur blini à la farine de blé noir</p>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Homard et espuma de potiron</h3>
+                            <p class="entrees__description">Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">20€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">35€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Foie gras de canard cuit entier</h3>
+                            <p class="entrees__description">Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">35€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Homard et espuma de potiron</h3>
-                        <p class="entrees__description">Mariné aux zestes d'orange</p>
+                </section>
+    
+                <section class="plats">
+                    <h2>PLATS</h2>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Noix de coquilles Saint-Jacques</h3>
+                            <p class="plats__description">Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">40€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">20€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Langoustine poêlée</h3>
+                            <p class="plats__description">Purée de patate douce</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">35€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Foie gras de canard cuit entier</h3>
-                        <p class="entrees__description">Confiture de figue et pain toasté</p>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Mijoté de queue de boeuf </h3>
+                            <p class="plats__description">Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">44€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">35€</p>
-                        <div class="entrees__check menu__check"></div>
+                </section>
+    
+                <section class=desserts>
+                    <h2>DESSERTS</h2>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Macaron noisette et chocolat</h3>
+                            <p class="desserts__description">Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">18€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-            </section>
-
-            <section class="plats">
-                <h2>PLATS</h2>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Noix de coquilles Saint-Jacques</h3>
-                        <p class="plats__description">Sur lit de purée de céleri-rave</p>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Baba au rhum revisité </h3>
+                            <p class="desserts__description">Avec son coulis de citron</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">22€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">40€</p>
-                        <div class="plats__check menu__check"></div>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Tarte au citron meringuée </h3>
+                            <p class="desserts__description">Déstructurée</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">23€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Langoustine poêlée</h3>
-                        <p class="plats__description">Purée de patate douce</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">35€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Mijoté de queue de boeuf </h3>
-                        <p class="plats__description">Et riz sauvage aux zestes de citron</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">44€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section class=desserts>
-                <h2>DESSERTS</h2>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Macaron noisette et chocolat</h3>
-                        <p class="desserts__description">Glace au caramel brun et sel de Guérande</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">18€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Baba au rhum revisité </h3>
-                        <p class="desserts__description">Avec son coulis de citron</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">22€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Tarte au citron meringuée </h3>
-                        <p class="desserts__description">Déstructurée</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">23€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-
-                <div class="menu__btn-validatation">
-                    <button class="btn">Commander</button>
-                </div>
-            </section>
+                </section>
+            </div>
+            <div class="menu__btn-validatation">
+                <button class="btn">Commander</button>
+            </div>
         </main>
 
         <footer>
