--- a/public/pages/menu-pages/le-delice-des-sens.html
+++ b/public/pages/menu-pages/le-delice-des-sens.html
@@ -40,111 +40,112 @@
                 </label>
             </div>
 
-            <section class="entrees">
-                <h2>ENTRÉES</h2>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Tartare de thon</h3>
-                        <p class="entrees__description">Assaisonné au yuzu</p>
+            <div class="menus__container">
+                <section class="entrees">
+                    <h2>ENTRÉES</h2>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Tartare de thon</h3>
+                            <p class="entrees__description">Assaisonné au yuzu</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">25€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">25€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Bouchée de homard croustillant</h3>
+                            <p class="entrees__description">Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">35€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Bouchée de homard croustillant</h3>
-                        <p class="entrees__description">Et sa farandole de petits légumes</p>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Velouté de cèpes </h3>
+                            <p class="entrees__description">Aux truffes</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">20€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">35€</p>
-                        <div class="entrees__check menu__check"></div>
+                </section>
+    
+                <section class="plats">
+                    <h2>PLATS</h2>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Poulet rôti aux herbes de Provence </h3>
+                            <p class="plats__description">Et sa crème de truffe</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">40€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Velouté de cèpes </h3>
-                        <p class="entrees__description">Aux truffes</p>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Langouste rôtie </h3>
+                            <p class="plats__description">Et ses légumes de saison</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">35€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">20€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Côte de boeuf Angus </h3>
+                            <p class="plats__description">Et sa purée de panais</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">44€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-            </section>
-
-            <section class="plats">
-                <h2>PLATS</h2>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Poulet rôti aux herbes de Provence </h3>
-                        <p class="plats__description">Et sa crème de truffe</p>
+                </section>
+    
+                <section class=desserts>
+                    <h2>DESSERTS</h2>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Farandole de desserts</h3>
+                            <p class="desserts__description">Du chef</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">18€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">40€</p>
-                        <div class="plats__check menu__check"></div>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Crème brûlée </h3>
+                            <p class="desserts__description">Revisitée</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">22€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Langouste rôtie </h3>
-                        <p class="plats__description">Et ses légumes de saison</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">35€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Côte de boeuf Angus </h3>
-                        <p class="plats__description">Et sa purée de panais</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">44€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section class=desserts>
-                <h2>DESSERTS</h2>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Farandole de desserts</h3>
-                        <p class="desserts__description">Du chef</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">18€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Crème brûlée </h3>
-                        <p class="desserts__description">Revisitée</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">22€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Tiramisu </h3>
-                        <p class="desserts__description">À la noisette</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">23€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-
-                <div class="menu__btn-validatation">
-                    <button class="btn">Commander</button>
-                </div>
-            </section>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Tiramisu </h3>
+                            <p class="desserts__description">À la noisette</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">23€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
+                    </div>   
+                </section>
+            </div>
+            <div class="menu__btn-validatation">
+                <button class="btn">Commander</button>
+            </div>
         </main>
 
         <footer>
