--- a/public/pages/menu-pages/la-palette-du-gout.html
+++ b/public/pages/menu-pages/la-palette-du-gout.html
@@ -40,111 +40,112 @@
                 </label>
             </div>
 
-            <section class="entrees">
-                <h2>ENTRÉES</h2>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Fricassée d'escargot</h3>
-                        <p class="entrees__description">Au piment d'Espelette </p>
+            <div class="menus__container">
+                <section class="entrees">
+                    <h2>ENTRÉES</h2>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Fricassée d'escargot</h3>
+                            <p class="entrees__description">Au piment d'Espelette </p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">25€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">25€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Foie gras de canard mi-cuit</h3>
+                            <p class="entrees__description">Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">35€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Foie gras de canard mi-cuit</h3>
-                        <p class="entrees__description">Et ses copeaux de truffe noire</p>
+                    <div class="entrees__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="entrees__name">Oeuf au plat</h3>
+                            <p class="entrees__description">Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="entrees__price">20€</p>
+                            <div class="entrees__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">35€</p>
-                        <div class="entrees__check menu__check"></div>
+                </section>
+    
+                <section class="plats">
+                    <h2>PLATS</h2>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Filet de boeuf aux herbes</h3>
+                            <p class="plats__description">Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">40€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="entrees__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="entrees__name">Oeuf au plat</h3>
-                        <p class="entrees__description">Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Parmentier de queue de boeuf</h3>
+                            <p class="plats__description">À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">35€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="entrees__price">20€</p>
-                        <div class="entrees__check menu__check"></div>
+                    <div class="plats__item menu__item">
+                        <div class="menu__text">
+                            <h3 class="plats__name">Filet de turbot</h3>
+                            <p class="plats__description">Aux agrumes</p>
+                        </div>
+                        <div class="menu__selection">
+                            <p class="plats__price">44€</p>
+                            <div class="plats__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-            </section>
-
-            <section class="plats">
-                <h2>PLATS</h2>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Filet de boeuf aux herbes</h3>
-                        <p class="plats__description">Accompagné de sa ribambelle de légumes</p>
+                </section>
+    
+                <section class=desserts>
+                    <h2>DESSERTS</h2>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Paris-Brest</h3>
+                            <p class="desserts__description">Revisité</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">18€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">40€</p>
-                        <div class="plats__check menu__check"></div>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Macaron au chocolat d'exception</h3>
+                            <p class="desserts__description">Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">22€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
                     </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Parmentier de queue de boeuf</h3>
-                        <p class="plats__description">À la truffe noire sur sa purée de panais</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">35€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="plats__item menu__item">
-                    <div class="menu__text">
-                        <h3 class="plats__name">Filet de turbot</h3>
-                        <p class="plats__description">Aux agrumes</p>
-                    </div>
-                    <div class="menu__selection">
-                        <p class="plats__price">44€</p>
-                        <div class="plats__check menu__check"></div>
-                    </div>
-                </div>
-            </section>
-
-            <section class=desserts>
-                <h2>DESSERTS</h2>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Paris-Brest</h3>
-                        <p class="desserts__description">Revisité</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">18€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Macaron au chocolat d'exception</h3>
-                        <p class="desserts__description">Et glace à la vanille de Madagascar</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">22€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-                <div class="desserts__item menu__item">
-                    <div class="desserts__text menu__text">
-                        <h3 class="desserts__name">Mousse au chocolat </h3>
-                        <p class="desserts__description">Au piment d'Espelette et à la truffe noire</p>
-                    </div>
-                    <div class="desserts__selection menu__selection">
-                        <p class="desserts__price">23€</p>
-                        <div class="desserts__check menu__check"></div>
-                    </div>
-                </div>
-
-                <div class="menu__btn-validatation">
-                    <button class="btn">Commander</button>
-                </div>
-            </section>
+                    <div class="desserts__item menu__item">
+                        <div class="desserts__text menu__text">
+                            <h3 class="desserts__name">Mousse au chocolat </h3>
+                            <p class="desserts__description">Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="desserts__selection menu__selection">
+                            <p class="desserts__price">23€</p>
+                            <div class="desserts__check menu__check"></div>
+                        </div>
+                    </div>   
+                </section>
+            </div>
+            <div class="menu__btn-validatation">
+                <button class="btn">Commander</button>
+            </div>
         </main>
 
         <footer>
