--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <li><a href="#"><i class="fa fa-cutlery" aria-hidden="true"></i> Proposer un restaurant</a></li>
                 <li><a href="#"><i class="fa fa-handshake-o" aria-hidden="true"></i> Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:ohmyfood@gmail.com">Contact</a></li>
             </ul>
         </footer>        
     </body>
