--- a/index.html
+++ b/index.html
@@ -61,66 +61,74 @@
         <main class="restaurants" id="restaurants">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__list">
-                <a href="public/pages/menu-pages/la-palette-du-gout.html" class="restaurants__item restaurants__item_new">
-                    <figure>
-                        <img src="public/images/restaurants/small/palette-du-gout.jpg" alt="Alt text" class="restaurant__img">
-                        <figcaption>
-                            <div class="restaurants__label">
-                                <h3 class="restautant__name">La palette du goût</h3>
-                                <p class="restaurants__location">Ménilmontant</p>
-                            </div>
-                            <label class="restaurants__favourite">
-                                <input type="checkbox">
-                                <span class="heart restaurants__heart"></span>
-                            </label>
-                        </figcaption>
-                    </figure>
-                </a>
-                <a href="public/pages/menu-pages/la-note-enchantee.html" class="restaurants__item restaurants__item_new">
-                    <figure>
-                        <img src="public/images/restaurants/small/la-note-enchantee.jpg" alt="Alt text" class="restaurant__img">
-                        <figcaption>
-                            <div class="restaurants__label">
-                                <h3 class="restautant__name">La note enchantée</h3>
-                                <p class="restaurants__location">Charonne</p>
-                            </div>
-                            <label class="restaurants__favourite">
-                                <input type="checkbox">
-                                <span class="heart restaurants__heart"></span>
-                            </label>
-                        </figcaption>
-                    </figure>
-                </a>
-                <a href="public/pages/menu-pages/a-la-francaise.html" class="restaurants__item">
-                    <figure>
-                        <img src="public/images/restaurants/small/a-la-francaise.jpg" alt="Alt text" class="restaurant__img">
-                        <figcaption>
-                            <div class="restaurants__label">
-                                <h3 class="restautant__name">À la française</h3>
-                                <p class="restaurants__location">Cité Rouge</p>
-                            </div>
-                            <label class="restaurants__favourite">
-                                <input type="checkbox">
-                                <span class="heart restaurants__heart"></span>
-                            </label>
-                        </figcaption>
-                    </figure>
-                </a>
-                <a href="public/pages/menu-pages/le-delice-des-sens.html" class="restaurants__item">
-                    <figure>
-                        <img src="public/images/restaurants/small/le-delice-des-sens.jpg" alt="Alt text" class="restaurant__img">
-                        <figcaption>
-                            <div class="restaurants__label">
-                                <h3 class="restautant__name">Le délice des sens</h3>
-                                <p class="restaurants__location">Folie-Méricourt</p>
-                            </div>
-                            <label class="restaurants__favourite">
-                                <input type="checkbox">
-                                <span class="heart restaurants__heart"></span>
-                            </label>
-                        </figcaption>
-                    </figure>
-                </a>
+                <div class="restaurants__item restaurants__item_new">
+                    <a href="public/pages/menu-pages/la-palette-du-gout.html">
+                        <figure>
+                            <img src="public/images/restaurants/small/palette-du-gout.jpg" alt="Alt text" class="restaurant__img">
+                            <figcaption>
+                                <div class="restaurants__label">
+                                    <h3 class="restautant__name">La palette du goût</h3>
+                                    <p class="restaurants__location">Ménilmontant</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <label class="restaurants__favourite">
+                        <input type="checkbox">
+                        <span class="heart restaurants__heart"></span>
+                    </label>
+                </div>
+                <div class="restaurants__item restaurants__item_new">
+                    <a href="public/pages/menu-pages/la-note-enchantee.html">
+                        <figure>
+                            <img src="public/images/restaurants/small/la-note-enchantee.jpg" alt="Alt text" class="restaurant__img">
+                            <figcaption>
+                                <div class="restaurants__label">
+                                    <h3 class="restautant__name">La note enchantée</h3>
+                                    <p class="restaurants__location">Charonne</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <label class="restaurants__favourite">
+                        <input type="checkbox">
+                        <span class="heart restaurants__heart"></span>
+                    </label>
+                </div>
+                <div class="restaurants__item">
+                    <a href="public/pages/menu-pages/a-la-francaise.html">
+                        <figure>
+                            <img src="public/images/restaurants/small/a-la-francaise.jpg" alt="Alt text" class="restaurant__img">
+                            <figcaption>
+                                <div class="restaurants__label">
+                                    <h3 class="restautant__name">À la française</h3>
+                                    <p class="restaurants__location">Cité Rouge</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <label class="restaurants__favourite">
+                        <input type="checkbox">
+                        <span class="heart restaurants__heart"></span>
+                    </label>
+                </div>
+                <div class="restaurants__item">
+                    <a href="public/pages/menu-pages/le-delice-des-sens.html">
+                        <figure>
+                            <img src="public/images/restaurants/small/le-delice-des-sens.jpg" alt="Alt text" class="restaurant__img">
+                            <figcaption>
+                                <div class="restaurants__label">
+                                    <h3 class="restautant__name">Le délice des sens</h3>
+                                    <p class="restaurants__location">Folie-Méricourt</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <label class="restaurants__favourite">
+                        <input type="checkbox">
+                        <span class="heart restaurants__heart"></span>
+                    </label>
+                </div>
             </div>
         </main>
 
