--- a/public/pages/menu-pages/le-delice-des-sens.html
+++ b/public/pages/menu-pages/le-delice-des-sens.html
@@ -11,6 +11,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <!-- Font awesome icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicons/favicon-16x16.png">
+        <link rel="manifest" href="../../images/favicons/site.webmanifest">
+        <link rel="mask-icon" href="../../images/favicons/safari-pinned-tab.svg" color="#42484a">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="theme-color" content="#ffffff">
         <title>Le délice des sens</title>
     </head>
 
